# coolify-demo

./: README.md  app.py  pyproject.toml  requirements.txt
config/: application.rb  cable.yml  credentials.yml.enc  database.yml
config/environments/: production.rb
coolify/: Gemfile
coolify/app/views/layouts/: application.html.erb
coolify/config/: database.yml
